# osu-local-scores

./: .eslintrc.js  .gitignore  .npmrc  LICENSE  README.md  binding.gyp  errorWindow.html  main.cpp  main.js  mainWindow.html  modsWindow.html  package-lock.json  package.json  processReplayWindow.html  quasar.conf.js  settingsWindow.html  tsconfig.json  worker.js
assets/csharp/: ScoresDb.cs
assets/css/: mainWindow.css  modsWindow.css
assets/js/: errorWindow.js  mainWindow.js  modsWindow.js  processReplayWindow.js  settingsWindow.js
assets/json/: settings.json
assets/py/: catchthepp.py  sample.py
src/: App.vue
src-electron/: electron-main.ts  electron-preload.ts
src-electron/icons/: icon.icns
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  parsing.rs  replay.rs
src-wasm/src/parsing/: score.rs
src-wasm/src/replay/: accuracy.rs  grade.rs
src/classes/: Settings.ts
src/components/: ColumnBody.vue  ColumnHeader.vue  Header.vue  SettingsDialog.vue
src/components/cells/: Accuracy.vue  Combo.vue  Date.vue  Gamemode.vue  Grade.vue  Misses.vue  Mods.vue  Pp.vue  Score.vue
src/composables/: useScore.ts  useWindowSize.ts
src/interfaces/: DatabaseResponse.ts  ElectronWindow.ts  Filter.ts  WindowSize.ts  Worker.ts
src/layouts/: MainLayout.vue
src/pages/: Index.vue
src/router/: index.ts  routes.ts
src/services/: PlatformService.ts  SettingsService.ts  UpdateService.ts  WorkerService.ts
src/worker/: Worker.ts
